--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ VITE_SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsI
 
 VITE_SUPABASE_URL=https://npcfldaebksgvjbxggam.supabase.co
 
-VITE_APP_URL=https://shorty-url-shortner.vercel.app/
+VITE_APP_URL=theshorty.live
 
